--- a/booking/static/booking/css/style.css
+++ b/booking/static/booking/css/style.css
@@ -117,3 +117,32 @@ html, body {
   border-radius: 0.5rem;
   cursor: pointer;
 }
+
+#modal {
+  display: none;
+  position: fixed;
+  z-index: 2;
+  padding-top: 6rem;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+#modal-content {
+  font-family: 'Open Sans', Helvetica, Arial, sans-serif;
+  background-color: #efefef;
+  margin: 2rem;
+  padding: 1rem;
+}
+
+#modal-content label{
+  padding-bottom: 0.5rem;
+}
+
+#modal-content input[type=submit]{
+  margin: 1rem auto 0 auto;
+}
