--- a/booking/static/booking/css/style.css
+++ b/booking/static/booking/css/style.css
@@ -87,6 +87,15 @@ html, body {
   overflow-y: auto;
 }
 
+#calendar-content .img-container {
+  display: grid;
+  height: 100%;
+}
+
+#calendar-content .img-container img {
+  margin: auto;
+}
+
 #calendar-content::-webkit-scrollbar {
   width: 1rem;
 }
