--- a/users/templates/users/index.html
+++ b/users/templates/users/index.html
@@ -60,7 +60,7 @@
     <div class="row">
       <div class="col-12 col-md-6">
         <div class="contact-header">
-          <h3 class="h3">Personal Information</h3>
+          <h3 class="h3">Contact Info</h3>
           <div class="edit">
             <a href="#">Edit</a>
           </div>
@@ -76,8 +76,14 @@
           <div>&bull;&bull;&bull;&bull;&bull;&bull;&bull;&bull; <a href="#">Change</a></div>
         </div>
       </div>
-      <div class="col-12 col-md-6">
+      <div class="col-12 col-md-6 next-appointment">
         <h3 class="h3">Next Appointment</h3>
+        <div class="appointment">
+          <h5 class="h5">Dec</h5>
+          <h1 class="h1">30</h1>
+          <p>5:00 pm</p>
+        </div>
+        <a href="#">Cancel</a>
       </div>
     </div>
     {% endif %}
