--- a/users/templates/users/index.html
+++ b/users/templates/users/index.html
@@ -26,64 +26,82 @@
     {% endfor %}
     {% endif %}
     {% if profile == None %}
-    <h1 class="h1">Sign In</h1>
-    <div class="row">
-      <div class="col-12 col-md-6">
-        <h3 class="h3">Login</h3>
-        <form action="{% url 'users:login' %}" method="POST">
-          <div class="modal-body">
-            {% csrf_token %}
-            <input type="text" name="email" placeholder="Email" class="form-control">
-            <input type="password" name="password" placeholder="Password" class="form-control">
-            <input type="submit" class="btn btn-primary" value="Login">
-          </div>
-        </form>
-      </div>
-      <div class="col-12 col-md-6">
-        <h3 class="h3">Register</h3>
-        <form action="{% url 'users:register' %}" method="POST">
-          <div class="modal-body">
-            {% csrf_token %}
-            <input type="text" name="firstName" placeholder="First Name" class="form-control">
-            <input type="text" name="lastName" placeholder="Last Name" class="form-control">
-            <input type="text" name="email" placeholder="Email" class="form-control">
-            <input type="text" name="phone" placeholder="Phone" class="form-control">
-            <input type="password" name="password" placeholder="Password" class="form-control">
-            <input type="password" name="confirmPassword" placeholder="Confirm Password" class="form-control">
-            <input type="submit" class="btn btn-primary" value="Register">
-          </div>
-        </form>
+    <div class="sign-in">
+      <h1 class="h1">Sign In</h1>
+      <div class="row">
+        <div class="col-12 col-md-6">
+          <h3 class="h3">Login</h3>
+          <form action="{% url 'users:login' %}" method="POST">
+            <div class="modal-body">
+              {% csrf_token %}
+              <input type="text" name="email" placeholder="Email" class="form-control">
+              <input type="password" name="password" placeholder="Password" class="form-control">
+              <input type="submit" class="btn btn-primary" value="Login">
+            </div>
+          </form>
+        </div>
+        <div class="col-12 col-md-6">
+          <h3 class="h3">Register</h3>
+          <form action="{% url 'users:register' %}" method="POST">
+            <div class="modal-body">
+              {% csrf_token %}
+              <input type="text" name="firstName" placeholder="First Name" class="form-control">
+              <input type="text" name="lastName" placeholder="Last Name" class="form-control">
+              <input type="text" name="email" placeholder="Email" class="form-control">
+              <input type="text" name="phone" placeholder="Phone" class="form-control">
+              <input type="password" name="password" placeholder="Password" class="form-control">
+              <input type="password" name="confirmPassword" placeholder="Confirm Password" class="form-control">
+              <input type="submit" class="btn btn-primary" value="Register">
+            </div>
+          </form>
+        </div>
       </div>
     </div>
     {% else %}
-    <h1 class="h1">Profile</h1>
-    <div class="row">
-      <div class="col-12 col-md-6">
-        <div class="contact-header">
-          <h3 class="h3">Contact Info</h3>
-          <div class="edit">
-            <a href="#">Edit</a>
+    <div class="profile">
+      <h1 class="h1">Profile</h1>
+      <div class="row">
+        <div class="col-12 col-md-6">
+          <div class="contact-header">
+            <h3 class="h3">Contact Info</h3>
+            <div class="edit">
+              <a href="#">Edit</a>
+            </div>
+          </div>
+          <div class="info">
+            <div>Name</div>
+            <div>{{ profile.user.first_name }} {{ profile.user.last_name }}</div>
+            <div>Phone Number</div>
+            <div>{{ profile.phone }}</div>
+            <div>Email</div>
+            <div>{{ profile.user.email }}</div>
+            <div>Password</div>
+            <div>&bull;&bull;&bull;&bull;&bull;&bull;&bull;&bull; <a href="#">Change</a></div>
           </div>
         </div>
-        <div class="info">
-          <div>Name</div>
-          <div>{{ profile.user.first_name }} {{ profile.user.last_name }}</div>
-          <div>Phone Number</div>
-          <div>{{ profile.phone }}</div>
-          <div>Email</div>
-          <div>{{ profile.user.email }}</div>
-          <div>Password</div>
-          <div>&bull;&bull;&bull;&bull;&bull;&bull;&bull;&bull; <a href="#">Change</a></div>
+        <div class="col-12 col-md-6 next-appointment">
+          <h3 class="h3">Next Appointment</h3>
+          {% if appt == None %}
+          <p class="empty text-center">
+            You currently do not have an appointment scheduled.
+            You may schedule one by choosing an appointment slot
+            <a href="{% url 'booking:index' %}">here</a>.
+          </p>
+          {% else %}
+          <div class="appointment">
+            <h5 class="h5 text-center">{{ appt.date_start|date:"D M" }}</h5>
+            <h1 class="h1 text-center">{{ appt.date_start|date:"j" }}</h1>
+            <p class="text-center">{{ appt.date_start|date:"g:i a" }}</p>
+          </div>
+          <form action="{% url 'booking:cancel' %}" method="POST">
+            {% csrf_token %}
+            <input type="hidden" name="appointment-id" value="{{ appt.pk }}">
+            <div class="btn-container">
+              <input class="btn btn-danger" type="submit" value="Cancel">
+            </div>
+          </form>
+          {% endif %}
         </div>
-      </div>
-      <div class="col-12 col-md-6 next-appointment">
-        <h3 class="h3">Next Appointment</h3>
-        <div class="appointment">
-          <h5 class="h5">{{ appt.date_start|date:"D M" }}</h5>
-          <h1 class="h1">{{ appt.date_start|date:"j" }}</h1>
-          <p>{{ appt.date_start|date:"g:i a" }}</p>
-        </div>
-        <a href="#">Cancel</a>
       </div>
     </div>
     {% endif %}
