--- a/users/templates/users/base.html
+++ b/users/templates/users/base.html
@@ -31,6 +31,7 @@
   <link rel="stylesheet" type="text/css" href="{% static 'home/css/reset.css' %}">
   <link rel="stylesheet" type="text/css" href="{% static 'home/css/navbar.css' %}">
   <link rel="stylesheet" type="text/css" href="{% static 'users/css/style.css' %}">
+  <script type="text/javascript" src="{% static 'users/js/script.js' %}"></script>
 </head>
 <body>
   {% include 'home/navbar.html' %}
