--- a/users/templates/users/index.html
+++ b/users/templates/users/index.html
@@ -32,27 +32,23 @@
         <div class="col-12 col-md-6">
           <h3 class="h3">Login</h3>
           <form action="{% url 'users:login' %}" method="POST">
-            <div class="modal-body">
-              {% csrf_token %}
-              <input type="text" name="email" placeholder="Email" class="form-control">
-              <input type="password" name="password" placeholder="Password" class="form-control">
-              <input type="submit" class="btn btn-primary" value="Login">
-            </div>
+            {% csrf_token %}
+            <input type="text" name="email" placeholder="Email" class="form-control">
+            <input type="password" name="password" placeholder="Password" class="form-control">
+            <input type="submit" class="btn btn-primary" value="Login">
           </form>
         </div>
         <div class="col-12 col-md-6">
           <h3 class="h3">Register</h3>
           <form action="{% url 'users:register' %}" method="POST">
-            <div class="modal-body">
-              {% csrf_token %}
-              <input type="text" name="firstName" placeholder="First Name" class="form-control">
-              <input type="text" name="lastName" placeholder="Last Name" class="form-control">
-              <input type="text" name="email" placeholder="Email" class="form-control">
-              <input type="text" name="phone" placeholder="Phone" class="form-control">
-              <input type="password" name="password" placeholder="Password" class="form-control">
-              <input type="password" name="confirmPassword" placeholder="Confirm Password" class="form-control">
-              <input type="submit" class="btn btn-primary" value="Register">
-            </div>
+            {% csrf_token %}
+            <input type="text" name="firstName" placeholder="First Name" class="form-control">
+            <input type="text" name="lastName" placeholder="Last Name" class="form-control">
+            <input type="text" name="email" placeholder="Email" class="form-control">
+            <input type="text" name="phone" placeholder="Phone" class="form-control">
+            <input type="password" name="password" placeholder="Password" class="form-control">
+            <input type="password" name="confirmPassword" placeholder="Confirm Password" class="form-control">
+            <input type="submit" class="btn btn-primary" value="Register">
           </form>
         </div>
       </div>
@@ -68,15 +64,20 @@
               <a href="#">Edit</a>
             </div>
           </div>
-          <div class="info">
-            <div>Name</div>
-            <div>{{ profile.user.first_name }} {{ profile.user.last_name }}</div>
-            <div>Phone Number</div>
-            <div>{{ profile.phone }}</div>
-            <div>Email</div>
-            <div>{{ profile.user.email }}</div>
-            <div>Password</div>
-            <div>&bull;&bull;&bull;&bull;&bull;&bull;&bull;&bull; <a href="#">Change</a></div>
+          <div class="info-container">
+            <div class="info">
+              <div>Name</div>
+              <div>{{ profile.user.first_name }} {{ profile.user.last_name }}</div>
+              <div>Phone Number</div>
+              <div>{{ profile.phone }}</div>
+              <div>Email</div>
+              <div>{{ profile.user.email }}</div>
+              <div>Password</div>
+              <div>
+                &bull;&bull;&bull;&bull;&bull;&bull;&bull;&bull;
+                <a href="#">Change</a>
+              </div>
+            </div>
           </div>
         </div>
         <div class="col-12 col-md-6 next-appointment">
@@ -93,11 +94,18 @@
             <h1 class="h1 text-center">{{ appt.date_start|date:"j" }}</h1>
             <p class="text-center">{{ appt.date_start|date:"g:i a" }}</p>
           </div>
+          {% if appt.massage == "DT" %}
+          <p class="massage-type text-center">Massage type: <span>Swedish</span></p>
+          {% elif appt.massage == "SW" %}
+          <p class="massage-type text-center">Massage type: <span>Deep Tissue</span></p>
+          {% else %}
+          <p class="massage-type text-center">Massage type: <span>unspecified</span></p>
+          {% endif %}
           <form action="{% url 'booking:cancel' %}" method="POST">
             {% csrf_token %}
             <input type="hidden" name="appointment-id" value="{{ appt.pk }}">
             <div class="btn-container">
-              <input class="btn btn-danger" type="submit" value="Cancel">
+              <input class="btn btn-secondary" type="submit" value="Cancel">
             </div>
           </form>
           {% endif %}
