--- a/users/templates/users/index.html
+++ b/users/templates/users/index.html
@@ -33,22 +33,70 @@
           <h3 class="h3">Login</h3>
           <form action="{% url 'users:login' %}" method="POST">
             {% csrf_token %}
-            <input type="text" name="email" placeholder="Email" class="form-control">
-            <input type="password" name="password" placeholder="Password" class="form-control">
-            <input type="submit" class="btn btn-primary" value="Login">
+            <input
+              type="text"
+              name="email"
+              placeholder="Email"
+              class="form-control"
+            >
+            <input
+              type="password"
+              name="password"
+              placeholder="Password"
+              class="form-control"
+            >
+            <input
+              type="submit"
+              class="btn btn-primary"
+              value="Login"
+            >
           </form>
         </div>
         <div class="col-12 col-md-6">
           <h3 class="h3">Register</h3>
           <form action="{% url 'users:register' %}" method="POST">
             {% csrf_token %}
-            <input type="text" name="firstName" placeholder="First Name" class="form-control">
-            <input type="text" name="lastName" placeholder="Last Name" class="form-control">
-            <input type="text" name="email" placeholder="Email" class="form-control">
-            <input type="text" name="phone" placeholder="Phone" class="form-control">
-            <input type="password" name="password" placeholder="Password" class="form-control">
-            <input type="password" name="confirmPassword" placeholder="Confirm Password" class="form-control">
-            <input type="submit" class="btn btn-primary" value="Register">
+            <input
+              type="text"
+              name="firstName"
+              placeholder="First Name"
+              class="form-control"
+            >
+            <input
+              type="text"
+              name="lastName"
+              placeholder="Last Name"
+              class="form-control"
+            >
+            <input
+              type="text"
+              name="email"
+              placeholder="Email"
+              class="form-control"
+            >
+            <input
+              type="text"
+              name="phone"
+              placeholder="Phone"
+              class="form-control"
+            >
+            <input
+              type="password"
+              name="password"
+              placeholder="Password"
+              class="form-control"
+            >
+            <input
+              type="password"
+              name="confirmPassword"
+              placeholder="Confirm Password"
+              class="form-control"
+            >
+            <input
+              type="submit"
+              class="btn btn-primary"
+              value="Register"
+            >
           </form>
         </div>
       </div>
@@ -68,16 +116,56 @@
             <div class="info">
               <div>Name</div>
               <div>{{ profile.user.first_name }} {{ profile.user.last_name }}</div>
-              <div>Phone Number</div>
-              <div>{{ profile.phone }}</div>
               <div>Email</div>
               <div>{{ profile.user.email }}</div>
+              <div>Phone Number</div>
+              <div>{{ profile.phone }}</div>
               <div>Password</div>
               <div>
                 &bull;&bull;&bull;&bull;&bull;&bull;&bull;&bull;
                 <a href="#">Change</a>
               </div>
             </div>
+          </div>
+          <div class="edit-profile">
+            <form action="{% url 'users:edit_profile' %}" method="POST">
+              {% csrf_token %}
+              <input type="hidden" name="profileId" value="{{ profile.pk }}">
+              <div class="form-inline">
+                <input
+                  type="text"
+                  name="firstName"
+                  placeholder="First Name"
+                  class="form-control col-6"
+                  value="{{ profile.user.first_name }}"
+                >
+                <input
+                  type="text"
+                  name="lastName"
+                  placeholder="Last Name"
+                  class="form-control col-6"
+                  value="{{ profile.user.last_name }}"
+                >
+              </div>
+              <input
+                type="text"
+                name="email"
+                placeholder="Email"
+                class="form-control"
+                value="{{ profile.user.email }}"
+              >
+              <input
+                type="text"
+                name="phone"
+                placeholder="Phone"
+                class="form-control"
+                value="{{ profile.phone }}"
+              >
+              <div class="btn-container">
+                <input class="btn btn-primary" type="submit" value="Edit">
+                <input class="btn btn-secondary" type="submit" value="Cancel">
+              </div>
+            </form>
           </div>
         </div>
         <div class="col-12 col-md-6 next-appointment">
