--- a/users/templates/users/index.html
+++ b/users/templates/users/index.html
@@ -123,7 +123,7 @@
               <div>Password</div>
               <div>
                 &bull;&bull;&bull;&bull;&bull;&bull;&bull;&bull;
-                <a href="#">Change</a>
+                <a class="change" href="#">Change</a>
               </div>
             </div>
           </div>
@@ -166,6 +166,34 @@
                 <input class="btn btn-secondary" type="submit" value="Cancel">
               </div>
             </form>
+          </div>
+          <div class="edit-password">
+              <form action="{% url 'users:edit_password' %}" method="POST">
+                {% csrf_token %}
+                <input type="hidden" name="userId" value="{{ profile.user.pk }}">
+                <input
+                  type="password"
+                  name="currentPassword"
+                  placeholder="Current Password"
+                  class="form-control"
+                >
+                <input
+                  type="password"
+                  name="newPassword"
+                  placeholder="New Password"
+                  class="form-control"
+                >
+                <input
+                  type="password"
+                  name="passwordConfirm"
+                  placeholder="Confirm Password"
+                  class="form-control"
+                >
+                <div class="btn-container">
+                  <input class="btn btn-primary" type="submit" value="Submit">
+                  <input class="btn btn-secondary" type="submit" value="Cancel">
+                </div>
+              </form>
           </div>
         </div>
         <div class="col-12 col-md-6 next-appointment">
