--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -59,7 +59,7 @@
         <div class="col-12 col-lg-6">
             <div class="map-outer">
               <div class="gmap-canvas">
-                <iframe width="300" height="300" id="gmap-canvas" src="https://maps.google.com/maps?q=10745%20S%20California%20ave%20Chicago%2C%20IL%2060655&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
+                <iframe width="300" height="300" id="gmapCanvas" src="https://maps.google.com/maps?q=10745%20S%20California%20ave%20Chicago%2C%20IL%2060655&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
               </div>
             </div>
         </div>
