Big commit, see commit message
Migrated submit and cancel_appointment methods from views to managers
Changed IDs of #SW and #DT while adding new 'unspecified' radio buttons
Added icons to external links
Removed outlines from links and inputs
Changed camel case POST variable names to hyphenated names
Added functionality to change massage type from admin page
Made empty table on admin page unselectable
Structured .radio and .vertical-center classes in CSS
Changed massage type text to radio inputs with labels in admin page modal

--- a/booking/static/booking/css/style.css
+++ b/booking/static/booking/css/style.css
@@ -155,6 +155,7 @@ html, body {
   display: grid;
   grid-template-columns: 1.5rem auto;
   grid-gap: 0.25rem;
+  line-height: 1;
 }
 
 #modalContent p {
