--- a/booking/templates/booking/index.html
+++ b/booking/templates/booking/index.html
@@ -28,9 +28,11 @@
         <input type="hidden" name="appointment-id">
         <div class="radio">
           <input type="radio" name="massage" value="SW">
-          <label id="SW" for="massage">Swedish</label>
+          <label id="swedish" for="massage">Swedish</label>
           <input type="radio" name="massage" value="DT">
-          <label id="DT" for="massage">Deep Tissue</label>
+          <label id="deepTissue" for="massage">Deep Tissue</label>
+          <input type="radio" name="massage" value="" checked>
+          <label id="unspecified" class="font-italic" for="massage">unspecified</label>
         </div>
         <p class="text-center">You may change your selection at the time of your appointment.</p>
         <input type="submit" class="btn btn-primary" value="Submit">
