--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -43,6 +43,7 @@
           by previous injuries.
           <br>
           <a href="http://www.differencebetween.net/miscellaneous/difference-between-swedish-massage-and-deep-tissue-massage/#ixzz5tmtx6Bdb">Read more</a>
+          <i class="fas fa-external-link-alt" title="External Link"></i>
         </p>
       </div>
       <div class="col col-md-6 d-none d-md-block img">
