--- a/home/static/home/css/style.css
+++ b/home/static/home/css/style.css
@@ -14,6 +14,17 @@ h3 {
   font-size: 1.3125rem;
 }
 
+a {
+  outline: 0;
+}
+
+.fa-external-link-alt {
+  color: #007bff;
+  vertical-align: 1px;
+  font-size: smaller;
+  cursor: pointer;
+}
+
 .tos-privacy h1,
 .tos-privacy h3 {
   font-weight: bold;
