--- a/home/templates/home/footer.html
+++ b/home/templates/home/footer.html
@@ -10,9 +10,11 @@
         </li>
         <li>
           <a href="https://github.com/mattmc318/pharmasseuse/">GitHub</a>
+          <i class="fas fa-external-link-alt" title="External Link"></i>
         </li>
         <li>
           <a href="http://mccarthywebdesign.com/">McCarthy Web Design</a>
+          <i class="fas fa-external-link-alt" title="External Link"></i>
         </li>
       </ul>
     </div>
