--- a/home/templates/home/privacy.html
+++ b/home/templates/home/privacy.html
@@ -7,7 +7,7 @@
   <p>At {{ name }}, accessible from {{ domain }}, one of our main priorities is the privacy of our visitors. This Privacy Policy document contains types of information that is collected and recorded by {{ name }} and how we use it.</p>
   <p>If you have additional questions or require more information about our Privacy Policy, do not hesitate to contact us through email at mattmc318@gmail.com</p>
   <h3>General Data Protection Regulation (GDPR)</h3>
-  <p>We are a Data Controller of your information. If you'd like to learn more about GDPR and your rights under GDPR, please read the <a href="https://www.freeprivacypolicy.com/blog/gdpr-privacy-policy/">GDPR guide</a>.</p>
+  <p>We are a Data Controller of your information. If you'd like to learn more about GDPR and your rights under GDPR, please read the <a href="https://www.freeprivacypolicy.com/blog/gdpr-privacy-policy/">GDPR guide</a> <i class="fas fa-external-link-alt" title="External Link"></i>.</p>
   <p>{{ name }} legal basis for collecting and using the personal information described in this Privacy Policy depends on the Personal Information we collect and the specific context in which we collect the information:</p>
   <ul>
     <li>{{ name }} needs to perform a contract with you</li>
@@ -30,7 +30,7 @@
   <p>{{ name }} follows a standard procedure of using log files. These files log visitors when they visit websites. All hosting companies do this and a part of hosting services' analytics. The information collected by log files include internet protocol (IP) addresses, browser type, Internet Service Provider (ISP), date and time stamp, referring/exit pages, and possibly the number of clicks. These are not linked to any information that is personally identifiable. The purpose of the information is for analyzing trends, administering the site, tracking users' movement on the website, and gathering demographic information.</p>
   <h3>Cookies and Web Beacons</h3>
   <p>Like any other website, {{ name }} uses 'cookies'. These cookies are used to store information including visitors' preferences, and the pages on the website that the visitor accessed or visited. The information is used to optimize the users' experience by customizing our web page content based on visitors' browser type and/or other information.</p>
-  <p>You can learn how to manage cookies on your web browser by following the <a href="https://privacypolicies.com/blog/browser-cookies-guide/">Browser Cookies Guide</a>.</p>
+  <p>You can learn how to manage cookies on your web browser by following the <a href="https://privacypolicies.com/blog/browser-cookies-guide/">Browser Cookies Guide</a> <i class="fas fa-external-link-alt" title="External Link"></i>.</p>
   <h3>Privacy Policies</h3>
   <P>You may consult this list to find the Privacy Policy for each of the advertising partners of {{ name }}.</p>
   <p>Third-party ad servers or ad networks uses technologies like cookies, JavaScript, or Web Beacons that are used in their respective advertisements and links that appear on {{ name }}, which are sent directly to users' browser. They automatically receive your IP address when this occurs. These technologies are used to measure the effectiveness of their advertising campaigns and/or to personalize the advertising content that you see on websites that you visit.</p>
@@ -42,7 +42,7 @@
   <p>Another part of our priority is adding protection for children while using the internet. We encourage parents and guardians to observe, participate in, and/or monitor and guide their online activity.</p>
   <p>{{ name }} does not knowingly collect any Personal Identifiable Information from children under the age of 13. If you think that your child provided this kind of information on our website, we strongly encourage you to contact us immediately and we will do our best efforts to promptly remove such information from our records.</p>
   <h3>Online Privacy Policy Only</h3>
-  <p>Our Privacy Policy created at GDPRPrivacyPolicy.net) applies only to our online activities and is valid for visitors to our website with regards to the information that they shared and/or collect in {{ name }}. This policy is not applicable to any information collected offline or via channels other than this website. <a href="https://gdprprivacypolicy.net">Our GDPR Privacy Policy</a> was generated from the GDPR Privacy Policy Generator.</p>
+  <p>Our Privacy Policy created at GDPRPrivacyPolicy.net) applies only to our online activities and is valid for visitors to our website with regards to the information that they shared and/or collect in {{ name }}. This policy is not applicable to any information collected offline or via channels other than this website. <a href="https://gdprprivacypolicy.net">Our GDPR Privacy Policy</a> <i class="fas fa-external-link-alt" title="External Link"></i> was generated from the GDPR Privacy Policy Generator.</p>
   <h3>Consent</h3>
   <p>By using our website, you hereby consent to our Privacy Policy and agree to its terms.</p>
 </div>
