Finished 'Update Massage Type' button on admin page

--- a/users/templates/users/index.html
+++ b/users/templates/users/index.html
@@ -305,6 +305,7 @@
           <label id="unspecified" class="font-italic" for="massage">unspecified</label>
         </div>
       </div>
+      {% csrf_token %}
       <h5 class="h5">Actions</h5>
       <div class="btn-container">
         <a id="updateMassageType" class="btn btn-primary" href="#">Update Massage Type</a>
